...
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activity.MainActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/app_bar_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

...
            android:layout_height="?attr/actionBarSize"
            android:background="@color/blue"
            app:title="@string/app_name"
            app:titleTextColor="@color/white">

            <androidx.appcompat.widget.AppCompatImageButton
                android:id="@+id/action_logout"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_gravity="end"
                android:layout_marginEnd="0dp"
                android:background="@color/blue"
                android:src="@drawable/baseline_logout_24" />
...
