...
    <string name="story_description">Story Description</string>
    <string name="story_location">Story Location</string>
    <string name="terrain_type">Terrain</string>
    <string name="upload_story">Upload Story</string>
    <string name="use_location">Use Location</string>
    <string name="welcome">Welcome!</string>
    <string name="yes">Yes</string>
    <string name="title_activity_maps">MapsActivity</string>
</resources>
